# CNN_Classifier

./: .gitignore  README.md  dvc.yaml  params.yaml  setup.cfg  template.py
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2022-09-30-09-40-38/train/: events.out.tfevents.1664511043.DESKTOP-RGPFDH5.10328.0.v2
configs/: config.yaml
research/: st_01.ipynb  st_02.ipynb  st_03.ipynb  st_04.ipynb  trials.ipynb
src/deepClassifier/components/: data_ingestion.py  prepare_base_model.py  prepare_callbacks.py  training.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/constants/: __init__.py
src/deepClassifier/entity/: __init__.py  config_entity.py
src/deepClassifier/pipeline/: st_02_prepare_base_model.py  st_03_training.py  stage_01_data_ingestion.py
tests/unit/: test_utils.py
