[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

[options.extras_require]
testing =
    pytest>=7.1.3   #To run unit tests and integration tests
    mypy>=0.971   # it helps to check if there is any typing error
    flake8>=5.0.4  #To check mistakes in the code, like some extra spaces in some filename etc     
    tox>=3.25.1   # tox will help you create different working environments and test your application locally
    black>=22.8.0  # black is used for formatting your application, like if our code is following the python standard structure

[options.package_data]
deepClassifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py